--- a/css/main.css
+++ b/css/main.css
@@ -42,6 +42,22 @@ html{
     animation-delay: 15s;
 }
 
-#AFS1
-{max-width: 75%
-height= auto}
+#AFS1{
+    max-width: 30%;
+    height: auto;
+}
+
+#AFS2{
+    max-width: 25%;
+    height: auto;
+}
+
+#AFS3{
+    max-width: 70%;
+    height: auto;
+}
+
+#AFS4{
+    max-width: 10%;
+    height: auto;
+}
